# metube

./: .gitignore  LICENSE  README.md
encoder/: .env.example  meson.build
encoder/include/: dotenv.h
encoder/lib/pkgconfig/: libcrypto.pc  libcurl.pc  libssl.pc  openssl.pc
encoder/src/: consumer.hpp  encoder.hpp  main.cpp  worker.hpp
rest/: .env.example  requirements.txt  wsgi.py
rest/app/: __init__.py  config.py
rest/app/controller/: __init__.py  video.py
rest/app/lib/: amqp.py  s3.py  validators.py
rest/app/model/: upload.py
rest/app/schema/: video.py
rest/migrations/versions/: 2bb65538fac1_changed_length_of_upload_session_token.py  b73bbd7b7c97_init.py  e8265ffd46e8_added_status_to_uploadsession.py
web/: package.json
web/src/: App.tsx  http.ts
